--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
 - xeus-python=0.9
 - ipywidgets=7.6
 - widgetsnbextension=3.5
+- jupyterlab_widgets
 - ipyleaflet=0.13
 - altair=4.1
 - bqplot=0.12.20
